# Kustomer-Org-CLI

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: mod.rs  org_domain.rs  org_id.rs  urls.rs
src/models/: mod.rs  org_data_request.rs  org_data_response.rs  org_domain_request.rs  org_domain_response.rs  shared.rs
src/output/: print.rs
