[package]
name = "kustomer-org"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
reqwest = {version = "0.11.13", features = ["cookies", "json"]}
serde = "1.0.149"
serde_json = "1.0.89"
tokio = {version = "1.23.0", features = ["full"]}
